<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".OtpVerify">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinateView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignTop="@id/title"
        />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Verify"
        app:titleTextColor="@color/black"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        android:layout_alignParentTop="true"
        />

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_otp"
        android:layout_above="@id/subTitle"
        android:fontFamily="@font/lemon_regular"
        />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/pin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/lemon_regular"
        android:text="@string/otpSubtitle"
        android:textSize="18sp"
        android:textStyle="normal" />

    <com.chaos.view.PinView
        android:id="@+id/pin"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:cursorVisible="true"
        android:gravity="center"
        android:inputType="number"
        android:itemBackground="@color/white"
        app:hideLineWhenFilled="false"
        app:itemCount="6"
        app:itemHeight="50dp"
        app:itemRadius="10dp"
        app:itemWidth="50dp" />

    <TextView
        android:id="@+id/resendCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_code"
        android:layout_below="@id/pin"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:enabled="false"
        android:layout_margin="10sp"
        android:fontFamily="@font/lemon_regular"
        />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pin"
        android:layout_alignParentStart="true"
        android:fontFamily="@font/lemon_regular"
        />

</RelativeLayout>